# edge-ai-voice-recognition

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  MEASURE_TODO.md  README.md  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitc-1
components/esp-tflite-micro/: CMakeLists.txt
data/: layer_stats.csv  slow_profile.csv
measurements/: autocreate.bash
measurements/basic/energy/: energy_f104_b5.csv  energy_f128_b6_qat.csv  energy_f176_b6_qat.csv  energy_f96_b6_ptq.csv
measurements/basic/profile/: profile_f172_b6_qat.csv  profile_f96_b6_ptq.csv
measurements/basic/stats/: stats_f128_b6_qat.csv  stats_f172_b6_qat.csv  stats_f64_b6_qat.csv
measurements/best/energy/: energy_f104_b5_ptq.csv  energy_f176_b7_qat.csv  energy_f24_b3_ptq.csv  energy_f24_b5_qat.csv  energy_f32_b4_ptq.csv  energy_f32_b6_ptq.csv  energy_f40_b2_ptq.csv  energy_f48_b3_ptq.csv  energy_f48_b4_qat.csv  energy_f48_b5_ptq.csv  energy_f64_b2_ptq.csv  energy_f64_b3_qat.csv  energy_f64_b7_ptq.csv  energy_f72_b3_ptq.csv  energy_f72_b4_qat.csv  energy_f80_b5_qat.csv  energy_f88_b3_ptq.csv  energy_f88_b6_ptq.csv
measurements/best/profile/: profile_f104_b5_ptq.csv  profile_f176_b7_qat.csv  profile_f24_b3_ptq.csv  profile_f24_b5_qat.csv  profile_f32_b4_ptq.csv  profile_f32_b6_ptq.csv  profile_f40_b2_ptq.csv  profile_f48_b3_ptq.csv  profile_f48_b4_qat.csv  profile_f48_b5_ptq.csv  profile_f64_b2_ptq.csv  profile_f64_b3_qat.csv  profile_f64_b7_ptq.csv  profile_f72_b3_ptq.csv  profile_f72_b4_qat.csv  profile_f80_b5_qat.csv  profile_f88_b3_ptq.csv  profile_f88_b6_ptq.csv
measurements/energy/: energy_f160_b6_qat.csv  energy_f172_b6_qat.csv  energy_f64_b6_qat.csv  energy_f96_b6_qat.csv
measurements/profile/: profile_f128_b6_qat.csv  profile_f160_b6_qat.csv  profile_f176_b6_qat.csv  profile_f64_b6_qat.csv  profile_f96_b6_qat.csv
measurements/stats/: stats_f160_b6_qat.csv  stats_f176_b6_qat.csv  stats_f96_b6_ptq.csv  stats_f96_b6_qat.csv
nn/: README.md  colab_train.ipynb  colab_train_old.ipynb  compare_models.py  config.py  evaluate.py  export_to_c.py  merge_results.py  migrate_old_runs.py  precompute_mfcc.py  quantize_ptq.py  quantize_qat.py  requirements.txt  runs.py  train.py  train_all.py
nn/data/: dataset.py  download.py  preprocess.py
nn/models/: ds_cnn.py
nn/results/: all_models_a-d_groups.csv  all_models_final.csv  merge_csvs.py
nn/utils/: audio.py  metrics.py  model-check.py
scripts/: bulk_profile_to_stats.py  make_pipeline_figure.py  profile_analysis.py
src/: CMakeLists.txt  display.c  display.h  font8x16.h  i2s_mic.c  i2s_mic.h  idf_component.yml  kws.cpp  kws.h  kws_profiler.h  main.c  mel_matrix.c  mel_matrix.h  mfcc.c  mfcc.h  model_data.c  model_data.h  model_loader.c  model_loader.h  profile_storage.c  profile_storage.h  st7789.c  st7789.h  sync_gpio.c  sync_gpio.h  vad_sleep.c  vad_sleep.h  voice_engine.h  voice_engine_kws.c  voice_engine_wakenet.c  wakenet.c  wakenet.h  ws2812_led.c  ws2812_led.h
(+19 files in other folders)
